# calamares-branding

./: CMakeLists.txt
src/live-welcome/: CMakeLists.txt  main.cpp
src/live-welcome/qml/: Main.qml
src/live-welcome/translations/: liri-live-welcome_en.ts  liri-live-welcome_it.ts
